--- a/workspace/aboutme.html
+++ b/workspace/aboutme.html
@@ -6,36 +6,34 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<style type="text/css">
-body {
-    background-color: #f0f0f2;
-margin: 0;
-padding: 0;
-        font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-
-serif;
+<style>
+	.topnav {
+    background-color: #333;
+    overflow: hidden;
 }
-div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 50px;
-        background-color: #fff;
-        border-radius: 1em;
 
-  }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        body {
-            background-color: #fff;
-        }
-        div {
-            width: auto;
-            margin: 0 auto;
-            border-radius: 0;
-            padding: 1em;
-} }
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
     </style>
 </head>
 
@@ -44,18 +42,14 @@ div {
 
 
 <body> 
-   <<form action= "home.html">
-			<input type= "submit" value="Home" />
-			</form>
+
+ <div class="topnav">
+  <a class="active" href="home.html">Home</a>
+  <a href="aboutme.html">About Me</a>
+  <a href="portfolio.html">Portfolio</a>
+</div>
 			
-	<form action= "aboutme.html">
-			<input type= "submit" value="About Me" />
-	</form>
-	
-	<form action= "portfolio.html">
-			<input type= "submit" value="Portfolio" />
-	</form>
-			
+		<br /> <br />	
 			
     <h1>Elyas Obdad</h1>
     <br /><br />
