--- a/workspace/home.html
+++ b/workspace/home.html
@@ -4,24 +4,45 @@
 	    <meta charset="utf-8">
 	   
 
+<style>
+	.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
 
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+</style>
 	    <title>Home</title>
 	  </head>
 	 
 
 	  <body>
    
-    <<form action= "home.html">
-			<input type= "submit" value="Home" />
-			</form>
-			
-	<form action= "aboutme.html">
-			<input type= "submit" value="About Me" />
-	</form>
-	
-	<form action= "portfolio.html">
-			<input type= "submit" value="Portfolio" />
-	</form>
+   <div class="topnav">
+  <a class="active" href="home.html">Home</a>
+  <a href="aboutme.html">About Me</a>
+  <a href="portfolio.html">Portfolio</a>
+</div>
 			
 			
     <h1 style="color:white">This is my Home Page!</h1>
