--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -3,20 +3,42 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+	    <style>
+	    		.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+	    </style>
 	  </head>
 	  <body>
 	      
-    <<form action= "home.html">
-			<input type= "submit" value="Home" />
-			</form>
-			
-	<form action= "aboutme.html">
-			<input type= "submit" value="About Me" />
-	</form>
-	
-	<form action= "portfolio.html">
-			<input type= "submit" value="Portfolio" />
-	</form>
+  <div class="topnav">
+  <a class="active" href="home.html">Home</a>
+  <a href="aboutme.html">About Me</a>
+  <a href="portfolio.html">Portfolio</a>
+</div>
 			
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
