--- a/workspace/aboutme.html
+++ b/workspace/aboutme.html
@@ -75,7 +75,7 @@
     	<ol>
     		<li> I drink water everyday </li>
     		<li> I can breathe</li>
-    		<li> I have taken a particular liking to females</li>
+    		<li> I have two legs</li>
 		</ol>
 
 	<hr color="blue" />
@@ -84,7 +84,7 @@
 		<table>
 			<tr><th>Name</th><th>How much I respect them(/10)</th><th>Picture</th></tr>
 			<tr><td>Ben Bestmann</td><td>2/10(BECAUSE HE WEARS FAKE YEEZYS)</td><td><img src="images/BenBest.jpg" width="220" height="150" /></td></tr>
-			<tr><td>akSHIT Panaphuza</td><td>0/10(JUST LOOK AT THE NAME)</td><td><img src="images/ace.jpg" width="220" height="150" /></td></tr>
+			<tr><td>Akshit Panaphuza</td><td>0/10(JUST LOOK AT THE NAME)</td><td><img src="images/ace.jpg" width="220" height="150" /></td></tr>
 			<tr><td>Nicholas Towns</td><td>11/10(AY)</td><td><img src="images/nick.jpg" width="220" height="150" /></td></tr>
 			
 			
