--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -44,7 +44,7 @@
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
-      <img src="images/mygamescratch.png" height="100">
+      <img src="images/scratchlogo.PNG" height="100">
     </a>
 	  </body>
 	</html>
