--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -46,5 +46,8 @@
     <a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
       <img src="images/scratchlogo.PNG" height="100">
     </a>
+     <a target="_blank" href="GPACalc.apk">
+      <img src="images/scratchlogo.PNG" height="100">
+    </a>
 	  </body>
 	</html>
