--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -47,7 +47,7 @@
       <img src="images/scratchlogo.PNG" height="100">
     </a>
      <a target="_blank" href="GPACalc.apk">
-      <img src="images/scratchlogo.PNG" height="100">
+      <img src="images/appinventor.PNG" height="100">
     </a>
 	  </body>
 	</html>
