--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -47,7 +47,9 @@
       <img src="images/scratchlogo.PNG" height="100">
     </a>
 	<br>
-     <a target="_blank" href="GPACalc.apk">
+	<p> This app lets you calculate your weighted GPA. Enter your course name,<br> enter the weight of the course(4 for regular/5 for AP),<br> and enter your letter grade(capital)</p>
+     <br>
+		  <a target="_blank" href="GPACalc.apk">
       <img src="images/appinventor.PNG" height="100">
     </a>
 	  </body>
