--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -41,7 +41,6 @@
 </div>
 			
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
       <img src="images/scratchlogo.PNG" height="100">
@@ -52,7 +51,8 @@
 		  <a target="_blank" href="GPACalc.apk">
       <img src="images/appinventor.PNG" height="100">
     </a>
-		<br>  
+		<br> 
+		  <p> We made a choices game in python called "Deeds"</p>
 	 <a target="_blank" href="main.py">
       <img src="images/Deedsflowchart.jpg" height="100">
     </a>
