--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -42,7 +42,9 @@
 			
     <h1>This is my Portfolio Page!</h1>
     <br>
-    <a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
+    <hr color = "blue">
+    
+	<a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
       <img src="images/scratchlogo.PNG" height="100">
     </a>
 	<br>
@@ -52,8 +54,10 @@
 		  <a target="_blank" href="GPACalc.apk">
       <img src="images/appinventor.PNG" height="100">
     </a>
-		<br> 
-		  <p> We made a choices game in python called "Deeds"</p>
+		
+	<br> 
+	  <hr color = "blue">
+	  <p> We made a choices game in python called "Deeds".<br> You are a sick man who has one hour to live.<br> While crossing the bridge to a hospital, you encounter a variety of life-changing situations</p>
 	 <a target="_blank" href="main.py">
       <img src="images/Deedsflowchart.jpg" height="100">
     </a>
