--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -6,7 +6,7 @@
 <style>
 	  div.scratch {
     		position: relative;
-		left: 150px;
+		left: 500px;
    		width: 400px;
     		height: 200px;
     		border: 3px solid #73AD21;
@@ -58,7 +58,7 @@
 	<div class="scratch">
 		<p>In this scratch game, you must use the arrow keys to move the polar bear in order to avoid the Carbon Dioxide Molecules for as long as you can!</p>
 		<a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
-      		<img src="images/scratchlogo.PNG" height="100">
+      		<img src="images/scratchlogo.PNG" height="300" width="300">
    		</a>
 	</div>
 	
