--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -56,7 +56,7 @@
 <hr color = "blue">
     
 	<div class="scratch">
-		<p>In this scratch game, you must use the arrow keys to move the polar bear in order to avoid the Carbon Dioxide Molecules for as long as you can!</p>
+		<p style="color:white;">In this scratch game, you must use the arrow keys to move the polar bear in order to avoid the Carbon Dioxide Molecules for as long as you can!</p>
 		<a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
       		<img src="images/scratchlogo.PNG" height="300" width="300">
    		</a>
@@ -65,7 +65,7 @@
 <br>
 <hr color = "blue">
 	
-	<p> This app lets you calculate your weighted GPA.<br> Enter your course name,<br> enter the weight of the course(4 for regular/5 for AP),<br> and enter your letter grade(capital)</p>
+	<p style="color:white;"> This app lets you calculate your weighted GPA.<br> Enter your course name,<br> enter the weight of the course(4 for regular/5 for AP),<br> and enter your letter grade(capital)</p>
      <br>
 		  <a target="_blank" href="GPACalc.apk">
       <img src="images/appinventor.PNG" height="100">
@@ -73,7 +73,7 @@
 		
 	<br> 
 	  <hr color = "blue">
-	  <p> We made a choices game in python called "Deeds".<br> You are a sick man who has one hour to live.<br> While crossing the bridge to a hospital, you encounter a variety of life-changing situations</p>
+	  <p style="color:white;"> We made a choices game in python called "Deeds".<br> You are a sick man who has one hour to live.<br> While crossing the bridge to a hospital, you encounter a variety of life-changing situations</p>
 	 <a target="_blank" href="main.py">
       <img src="images/Deedsflowchart.jpg" height="100">
     </a>
