--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -64,7 +64,7 @@
   		<a href="portfolio.html">Portfolio</a>
 	
 			
-	<h1>This is my Portfolio Page!</h1>
+	<h1 style="color:white;">This is my Portfolio Page!</h1>
 		  
 <br>
 
