--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -4,7 +4,7 @@
 	 <meta charset="utf-8">
 	 <title>Portfolio</title>
 <style>
-	  div.scratch {
+	  .scratch {
     		position: relative;
 		left: 500px;
    		width: 700px;
