--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -9,21 +9,21 @@
 		left: 500px;
    		width: 700px;
     		height: 900px;
-    		border: 3px solid ##0000FF;
+    		border: 3px solid #0000FF;
 } 
 	  div.MIT {
     		position: relative;
 		left: 0px;
    		width: 400px;
     		height: 500px;
-    		border: 3px solid ##0000FF;
+    		border: 3px solid #0000FF;
 } 
 	  div.Python {
     		position: relative;
 		left: 0px;
    		width: 400px;
     		height: 200px;
-    		border: 3px solid ##0000FF;
+    		border: 3px solid #0000FF;
 } 
 		    
 		
