--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -6,7 +6,7 @@
 <style>
 	  div.scratch {
     		position: relative;
-		left: 500px;
+		left: 700px;
    		width: 350px;
     		height: 400px;
     		border: 3px solid #0000FF;
@@ -67,6 +67,7 @@
 	<h1 style="color:white;">This is my Portfolio Page!</h1>
 		  
 <br>
+<hr color="white">
 
     
 	<div class="scratch">
