--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -64,8 +64,9 @@
   		<a href="portfolio.html">Portfolio</a>
 	
 <br><br>
+<center>
 	<h1 style="color:white;">This is my Portfolio Page!</h1>
-		  
+</center>	  
 <br>
 <hr color="white">
 
