--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -70,13 +70,13 @@
 <br>
 <hr color="white">
 
-    
+<center>
 	<div class="scratch">
 		<p style="color:white;">In this scratch game, you must use the arrow keys to move the polar bear in order to avoid the Carbon Dioxide Molecules for as long as you can!</p>
 		<a target="_blank" href="https://scratch.mit.edu/projects/202921585/">
       		<img src="images/scratchlogo.PNG" height="300" width="300">
    		</a>
-	
+</center>
 	
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
