--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -25,6 +25,13 @@
     		height: 430px;
     		border: 3px solid #0000FF;
 } 
+	div.Colors {
+    		position: relative;
+		left: 0px;
+   		width: 350px;
+    		height: 430px;
+    		border: 3px solid #0000FF;
+} 
 		    
 		
 	 .topnav {
@@ -93,6 +100,14 @@
 	  	<p style="color:white;"> We made a choices game in python called "Deeds".<br> You are a sick man who has one hour to live.<br> While crossing the bridge to a hospital, you encounter a variety of life-changing situations</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/Deedsflowchart.jpg" height="300" width="300">
+    		</a>
+	</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+	  <div class="Colors">
+	  	<p style="color:white;"> I used this Python code to manipulate a picture of the Flash</p>
+	 	<a target="_blank" href="main.py">
+      		<img src="images/Screen Shot 2018-05-06 at 5.04.25 PM.png.jpg" height="300" width="300">
     		</a>
 	</div>
 	  </body>
