--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -32,6 +32,20 @@
     		height: 430px;
     		border: 3px solid #0000FF;
 } 
+	div.Flash {
+    		position: relative;
+		left: 0px;
+   		width: 350px;
+    		height: 430px;
+    		border: 3px solid #0000FF;
+} 
+	div.FlashNew {
+    		position: relative;
+		left: 0px;
+   		width: 350px;
+    		height: 430px;
+    		border: 3px solid #0000FF;
+} 
 		    
 		
 	 .topnav {
@@ -108,6 +122,14 @@
 	  	<p style="color:white;"> I used this Python code to manipulate a picture of the Flash</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/Screen Shot 2018-05-06 at 5.04.25 PM.png.jpg" height="300" width="300">
+    		</a>
+	 <div class="Flash">
+	 	<a target="_blank" href="main.py">
+      		<img src="images/Flash.jpg" height="300" width="300">
+    		</a>
+	 <div class="FlashNew">
+	 	<a target="_blank" href="main.py">
+      		<img src="images/FlashNew.PNG" height="300" width="300">
     		</a>
 	</div>
 	  </body>
