--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -126,12 +126,14 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 	 <div class="Flash">
+		<p style="color:white;">Before</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/Flash.jpg" height="300" width="300">
     		</a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 	 <div class="FlashNew">
+		<p style="color:white;">After</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/FlashNew.PNG" height="300" width="300">
     		</a>
