--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -121,7 +121,7 @@
 	  <div class="Colors">
 	  	<p style="color:white;"> I used this Python code to manipulate a picture of the Flash</p>
 	 	<a target="_blank" href="main.py">
-      		<img src="images/Screen Shot 2018-05-06 at 5.04.25 PM.png.jpg" height="300" width="300">
+      		<img src="images/ColorsCode" height="300" width="300">
     		</a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
