--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -101,7 +101,7 @@
 	
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-
+<center>
 
 	<div class="MIT">
 		<p style="color:white;"> This app lets you calculate your weighted GPA. Enter your course name, enter the weight of the course(4 for regular/5 for AP), and enter your letter grade(capital)</p>
@@ -109,34 +109,40 @@
       		<img src="images/appinventor.PNG" height="300" width="300">
     		</a>
 		
+</center>
+		
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	  <div class="Python">
+<center>  
+	<div class="Python">
 	  	<p style="color:white;"> We made a choices game in python called "Deeds".<br> You are a sick man who has one hour to live.<br> While crossing the bridge to a hospital, you encounter a variety of life-changing situations</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/Deedsflowchart.jpg" height="300" width="300">
     		</a>
-	
+</center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+<center>
 	  <div class="Colors">
 	  	<p style="color:white;"> I used this Python code to manipulate a picture of the Flash</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/ColorsCode.PNG" height="300" width="300">
     		</a>
+</center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+<center>
 	 <div class="Flash">
 		<p style="color:white;">Before</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/Flash.jpg" height="300" width="300">
     		</a>
+</center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+<center>
 	 <div class="FlashNew">
 		<p style="color:white;">After</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/FlashNew.PNG" height="300" width="300">
     		</a>
+</center>
 	</div>
 	  </body>
 	</html>
