--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -46,6 +46,20 @@
     		height: 400px;
     		border: 3px solid #0000FF;
 } 
+	div.coolGraph {
+    		position: relative;
+		
+   		width: 350px;
+    		height: 400px;
+    		border: 3px solid #0000FF;
+} 
+	div.NetLogo {
+    		position: relative;
+		
+   		width: 350px;
+    		height: 400px;
+    		border: 3px solid #0000FF;
+} 
 		    
 		
 	 .topnav {
@@ -141,6 +155,22 @@
 		<p style="color:white;">After</p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/FlashNew.PNG" height="300" width="300">
+    		</a>
+</center>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<center>
+	 <div class="coolGraph">
+		<p style="color:white;">Here is a graph that I created in Python. We added some cool animations around it to make it more understandable. </p>
+	 	<a target="_blank" href="main.py">
+      		<img src="images/coolGraph.PNG" height="300" width="300">
+    		</a>
+</center>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<center>
+	 <div class="netLogo">
+		<p style="color:white;">This is a 3D simulation that my group created and edited in NetLogo. It answer's the question of whether or not it is possible to look inside 3D animated objects. </p>
+	 	<a target="_blank" href="main.py">
+      		<img src="images/netLogo.PNG" height="300" width="300">
     		</a>
 </center>
 	</div>
