--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -53,7 +53,14 @@
     		height: 400px;
     		border: 3px solid #0000FF;
 } 
-	div.NetLogo {
+	div.NetLogoProject {
+    		position: relative;
+		
+   		width: 350px;
+    		height: 400px;
+    		border: 3px solid #0000FF;
+} 
+	div.NetLogoCode {
     		position: relative;
 		
    		width: 350px;
@@ -167,12 +174,21 @@
 </center>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <center>
-	 <div class="netLogo">
-		<p style="color:white;">This is a 3D simulation that my group created and edited in NetLogo. It answer's the question of whether or not it is possible to look inside 3D animated objects. </p>
+	 <div class="netLogoProject">
+		<p style="color:white;"> It answer's the question of whether or not it is possible to look inside 3D animated objects. </p>
 	 	<a target="_blank" href="main.py">
-      		<img src="images/netLogo.PNG" height="300" width="300">
+      		<img src="images/netLogoProject.PNG" height="300" width="300">
     		</a>
 </center>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<center>
+	 <div class="netLogoCode">
+		<p style="color:white;">  </p>
+	 	<a target="_blank" href="main.py">
+      		<img src="images/netLogoCode.PNG" height="300" width="300">
+    		</a>
+</center>
+	
 	</div>
 	  </body>
 	</html>
