--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -174,7 +174,7 @@
 </center>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <center>
-	 <div class="netLogoProject">
+	 <div class="NetLogoProject">
 		<p style="color:white;"> It answer's the question of whether or not it is possible to look inside 3D animated objects. </p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/netLogoProject.PNG" height="300" width="300">
@@ -182,7 +182,7 @@
 </center>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <center>
-	 <div class="netLogoCode">
+	 <div class="NetLogoCode">
 		<p style="color:white;">  </p>
 	 	<a target="_blank" href="main.py">
       		<img src="images/netLogoCode.PNG" height="300" width="300">
