--- a/workspace/portfolio.html
+++ b/workspace/portfolio.html
@@ -177,7 +177,7 @@
 	 <div class="NetLogoProject">
 		<p style="color:white;"> It answer's the question of whether or not it is possible to look inside 3D animated objects. </p>
 	 	<a target="_blank" href="main.py">
-      		<img src="images/netLogoProject.PNG" height="300" width="300">
+      		<img src="images/NetLogoProject.PNG" height="300" width="300">
     		</a>
 </center>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -185,7 +185,7 @@
 	 <div class="NetLogoCode">
 		<p style="color:white;">  </p>
 	 	<a target="_blank" href="main.py">
-      		<img src="images/netLogoCode.PNG" height="300" width="300">
+      		<img src="images/NetLogoCode.PNG" height="300" width="300">
     		</a>
 </center>
 	
